--- a/src/styles/MovieCardList.css
+++ b/src/styles/MovieCardList.css
@@ -1,5 +1,6 @@
 /* Container for the entire movie card list */
 .movie-card-list {
+  align-items: center;  
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -8,21 +9,30 @@
 
 /* Search input styling */
 .search-input {
+  
   width: 100%;
   max-width: 400px;
   padding: 10px;
   font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 2px solid #ddd;
+  border-radius: 8px;
   margin-bottom: 20px;
+  
 }
-
+.search-input:focus {
+  border-color: #1a050c;
+}
 /* Carousel container for the scrolling effect */
 .carousel-container {
+  background-image: url('../assets/dark-abstract-square.jpeg'); /* Adjust the path if needed */
+  border-radius: 55px 55px 55px 55px; 
   position: relative;
   display: flex;
   align-items: center;
   overflow: hidden;
+  padding: 50px ;
+  width: 90%; /* Fixed width for the cards */
+  height: 500px; /* Fixed height for the cards */
 }
 
 /* The horizontally scrollable container */
@@ -52,6 +62,7 @@
 
 /* Navigation buttons */
 .scroll-button {
+  background: #ff4081;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
